Apply Java 18-21 language feature and new APIs
Updated code to apply language features and new APIs from Java 18-21; also refactored some parts.